# fractol

./: CMakeLists.txt  Makefile  argument.c  display.c  draw.c  event.c  fractol.h  julia.c  main.c  mandelbrot.c  zoom.c
includes/: fractol.h
libft/: Makefile
libft/includes/: libft.h
libft/srcs/: ft_copyuntil.c  ft_is_space.c  ft_lstnew.c  ft_putchar.c  ft_putchar_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_puttab.c  ft_strremb.c  ft_strsplit.c  get_next_line.c
srcs/: argument.c  burning_ship.c  display.c  event.c  julia.c  main.c  mandelbrot.c  movement.c  zoom.c
